// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PercentageBar should render 1`] = `
<div>
  <div>
    <div
      class="flex space-x-3"
    >
      <div
        class="py-4 text-lg font-bold text-theme-neutral-800"
      />
      <div
        class="flex justify-end flex-1 space-x-3"
      />
    </div>
    <div
      class="flex -space-x-1"
    />
  </div>
</div>
`;

exports[`PercentageBar should render with data 1`] = `
<div>
  <div>
    <div
      class="flex space-x-3"
    >
      <div
        class="py-4 text-lg font-bold text-theme-neutral-800"
      />
      <div
        class="flex justify-end flex-1 space-x-3"
      >
        <div
          class="flex items-center justify-end py-4 pl-6 pr-0"
          data-testid="item-percentage"
        >
          <div
            class="mr-2 border-2 rounded-full w-2 h-2 inline-block align-middle border-theme-danger-500"
          />
          <div
            class="inline-block text-sm text-base font-semibold text-theme-neutral-dark"
          >
            <span>
              ARK
               - 
              40
              %
            </span>
          </div>
        </div>
        <div
          class="flex items-center justify-end py-4 pl-6 pr-0"
          data-testid="item-percentage"
        >
          <div
            class="mr-2 border-2 rounded-full w-2 h-2 inline-block align-middle border-theme-warning-500"
          />
          <div
            class="inline-block text-sm text-base font-semibold text-theme-neutral-dark"
          >
            <span>
              BTC
               - 
              25
              %
            </span>
          </div>
        </div>
        <div
          class="flex items-center justify-end py-4 pl-6 pr-0"
          data-testid="item-percentage"
        >
          <div
            class="mr-2 border-2 rounded-full w-2 h-2 inline-block align-middle border-theme-primary-500"
          />
          <div
            class="inline-block text-sm text-base font-semibold text-theme-neutral-dark"
          >
            <span>
              ETH
               - 
              20
              %
            </span>
          </div>
        </div>
        <div
          class="flex items-center justify-end py-4 pl-6 pr-0"
          data-testid="item-percentage"
        >
          <div
            class="mr-2 border-2 rounded-full w-2 h-2 inline-block align-middle border-theme-neutral-400"
          />
          <div
            class="inline-block text-sm text-base font-semibold text-theme-neutral-dark"
          >
            <span>
              Other
               - 
              15
              %
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex -space-x-1"
    >
      <div
        class="h-1 rounded-sm bg-theme-danger-500"
      />
      <div
        class="h-1 rounded-sm bg-theme-warning-500"
      />
      <div
        class="h-1 rounded-sm bg-theme-primary-500"
      />
      <div
        class="h-1 rounded-sm bg-theme-neutral-400"
      />
    </div>
  </div>
</div>
`;

exports[`PercentageBar should render with title 1`] = `
<div>
  <div>
    <div
      class="flex space-x-3"
    >
      <div
        class="py-4 text-lg font-bold text-theme-neutral-800"
      >
        Total portfolio
      </div>
      <div
        class="flex justify-end flex-1 space-x-3"
      />
    </div>
    <div
      class="flex -space-x-1"
    />
  </div>
</div>
`;
